Django project with completed account app and initialization of some other apps added

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 tasks:
   clean:
     cmds:
-      - ruff check --quiet
+      - ruff check --ignore F401 --ignore F403 --quiet
       - ruff format
     silent: true
   deps:
