--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,12 @@ duckdb==1.3.2
 pytest-django==4.11.1
 coverage==7.10.3
 pytest-cov==6.2.1
-minio==7.2.16
 django-prose-editor==0.18.1
 django-allauth==65.11.1
 mypy==1.17.1
 pillow==11.3.0
 gunicorn==23.0.0
 django-celery-results==2.6.0
+django-storages==1.14.6
+boto3==1.40.27
+go-task-bin==3.44.1
