README.md updated and createsuperuser task added to Taskfile.yml

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,6 +18,10 @@ tasks:
     cmds:
       - ./manage.py makemigrations
     silent: true
+  createsuperuser:
+    cmds:
+      - ./manage.py createsuperuser
+    silent: true
   migrate:
     cmds:
       - ./manage.py migrate
